@@ -1,3 +1,10 @@
+2006-12-21  Albert Chu  <chu11@llnl.gov>
+
+	* src/libs/wrappers/wrappers.c (wrap_select): Fix bug then could
+	cause select() spinning.
+
+	* tagged cerebro-1-1-4
+	
 2006-12-20  Albert Chu  <chu11@llnl.gov>
 
 	* Fix various compiler warnings.
